--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -135,7 +135,7 @@ function fadeOut(){
   if(ctx.globalAlpha > .01){
    window.requestAnimationFrame(fadeOut) 
   }else{
-    window.setTimeout(restart, 500)
+    window.setTimeout(restart, 200)
   }
 }
 function restart(){
