--- a/index.html
+++ b/index.html
@@ -1,223 +1,43 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title></title>
-	</head>
-	<style type="text/css">
-		body{
-  background: #000;
-  
- 
-}
- #canvas {
-    /* border: 1px solid white; */
-    background: black;
-  }
-	</style>
-	<body>
-		<canvas id="canvas"></canvas>
-	</body>
-</html>
-<script type="text/javascript">
-var arr=["秦筱琼","筱琼，你很漂亮！","你好吗","干嘛呢","你很漂亮"]
-//window.setTimeout(newsone, 500)
-var o=0;
-function newsone(){
-	console.log(o)
-	if(o>4){
-		o=0
-		txt=arr[o];
-	}else{
-		txt=arr[o];
+<head>
+<title>js html5渲染的3D玫瑰花（程序员的情人节礼物）</title>
+<meta charset="utf-8">
+</head>
+<style type="text/css">
+	.word{
+		margin-top: 100px;
+		font-size: 60px;
+		text-align: center;
+		line-break: 60px;
+		font-weight: 600;
+		transition: all 2s linear;
+		/*opacity: 0;*/
+		transform: scale(2);
+		color: greenyellow;
 	}
-	o+=1;
-	console.log(o)
-	return txt
-	
-	
-}
-var txtH = 100;
-var font = "sans-serif";
-var bg = "#000";
-var rayColor1 = "#f50057";
-var rayColor2 = "#e040fb";
-var rayColor3 = "#ffff00";
-var rayColor4 = '#ddd';
-
-var canvas = document.getElementById("canvas");
-var ctx = canvas.getContext("2d");
-var cw = canvas.width = window.innerWidth;
-var ch = canvas.height = window.innerHeight;
-console.log(cw,ch)
-
-var w2 = cw/2;
-var h2 = ch/2;
-var pi = Math.PI;
-var pi2 = pi*.5;
-
-
-
-var txtCanvas = document.createElement("canvas");
-var txtCtx = txtCanvas.getContext("2d");
-txtCtx.font = txtH + "px " + font;
-txtCtx.textBaseline = "middle";
-var txtW = Math.floor(txtCtx.measureText(newsone()).width);
-console.log(txtW)
-txtCanvas.width = txtW;
-txtCanvas.height = txtH*1.5;
-
-
-var gradient = ctx.createRadialGradient(w2, h2, 0, w2, h2, txtH);
-gradient.addColorStop(0, rayColor3);
-gradient.addColorStop(.5, rayColor2);
-gradient.addColorStop(1, rayColor1);
-ctx.strokeStyle = gradient;
-
-txtCtx.fillStyle = gradient;
-txtCtx.font = txtH + "px " + font;
-txtCtx.textBaseline = "middle";
-txtCtx.fillText(newsone(),0,txtH*.5);
-
-//dirty adjust for descends
-txtH *= 1.5;
-
-var bufferCanvas = document.createElement("canvas");
-bufferCanvas.width = txtW;
-bufferCanvas.height = txtH;
-var buffer = bufferCanvas.getContext("2d");
-
-//text start position
-var sx = (cw-txtW)*0.5
-var sy = (ch-txtH)*0.5
-
-////generate data
-var rays = [];
-var txtData = txtCtx.getImageData(0,0,txtW,txtH);
-for (var i = 0; i < txtData.data.length; i+=4) {
-  var ii = i/4;
-  var row = Math.floor(ii/txtW)
-  var col = ii%txtW
-  var alpha = txtData.data[i+3]
-  if(alpha !== 0){
-    var c = "rgba("
-    c += [txtData.data[i],txtData.data[i+1],txtData.data[i+2], alpha/255 ] 
-    c += ")";
-    rays.push(new Ray(Math.floor(ii/txtW), ii%txtW, c));  
-  }
-}
-
-var current = 0;
-//start animation
-tick();
-
-function tick() {
-  ctx.clearRect(0,0,cw,ch)
-//console.log(bufferCanvas, 0, 0, current, txtH, sx, sy, current, txtH)
-  ctx.drawImage(bufferCanvas, 0, 0, current, txtH, sx, sy, current, txtH)
-  ctx.save()
-  ctx.globalAlpha = .05;
-  ctx.globalCompositeOperation = "lighter";
-  if(drawRays(current)){
-    current++;
-    current = Math.min(current, txtW)
-    window.requestAnimationFrame(tick)  
-  }else{
-    fadeOut()
-  }
-  ctx.restore()
-}
-
-function fadeOut(){
-  ctx.clearRect(0,0,cw,ch)
-  ctx.globalAlpha *= .95;
-  ctx.drawImage(bufferCanvas, 0, 0, current, txtH, sx, sy, current, txtH)
-  if(ctx.globalAlpha > .01){
-   window.requestAnimationFrame(fadeOut) 
-  }else{
-    window.setTimeout(restart, 500)
-  }
-}
-function restart(){
-  for(var i = 0; i < rays.length; i++){
-    rays[i].reset()
-  }
-  ctx.globalAlpha = 1
-  buffer.clearRect(0,0,txtW,txtH)
-  current = 0;
-  tick();
-}
-function drawRays(c){
-  var count = 0;
-  ctx.beginPath()
-  console.log(rays)
-  for(var i = 0; i < rays.length; i++){
-    var ray = rays[i];
-    if(ray.col < c){
-      count += ray.draw()
-    }
-  }
-  ctx.stroke()
-  return count !== rays.length;
-}
-
-
-function Ray(row, col, f){
-  this.col = col;
-  this.row = row;
-  
-  var xp = sx + col;
-  var yp = sy + row;
-  var fill = f;
-  
-  var ath = (txtH/1.5) 
-  
-  var a = pi2 * (this.row - ath*.5) / ath;
-  if(a === 0){
-    a = (Math.random() - .5) * pi2;
-  }
-  var da = .02 * Math.sign(a);
-  
-  var q = 2*pi * (this.col - txtW*.5) / txtW;
-  if(q === 0){
-    q = (Math.random() - .5) * pi;
-  }
-  var dq = .02 * Math.sign(q);
-  
-  da += (Math.random() - .5) * .005;
-  var l = 0;
-  var dl = Math.random()*2 + 2;
-  
-  var buffered = false;
-  
-  this.reset = function(){
-    q = 2*pi * (this.col - txtW*.5) / txtW;
-    a = pi2 * (this.row - ath*.5) / ath;
-    if(a === 0){
-      a = -pi2*.5;
-    }
-    l = 0;
-    buffered = false
-  }
-  this.draw = function(){
-    if(l < 0){
-      if(!buffered){
-        buffer.fillStyle = fill;
-        buffer.fillRect(this.col, this.row, 1, 1);
-        buffered = true
-      }
-      return 1;
-    }else{
-      ctx.moveTo(xp, yp)
-      ctx.quadraticCurveTo(xp + Math.cos(q) * l*.5,
-                        yp + Math.sin(q) * l*.5,
-                        xp + Math.cos(a) * l,
-                        yp + Math.sin(a) * l);
-      a += da;
-      q += dq;
-      l += Math.cos(a)*dl;
-      return 0;
-    }
-  }
-}
+	#c{
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		margin: auto;
+	}
+</style>
+<body>
+<canvas id="c" height="1200" width="750"></canvas>
+<div class="word">筱琼最漂亮</div>
+<script>
+    var b = document.body;
+    var c = document.getElementsByTagName('canvas')[0];
+    var a = c.getContext('2d');
+    document.body.clientWidth;
 </script>
+<script>
+// start of submission //
+with(m=Math)C=cos,S=sin,P=pow,R=random;c.width=c.height=f=500;h=-250;function p(a,b,c){if(c>60)return[S(a*7)*(13+5/(.2+P(b*4,4)))-S(b)*50,b*f+50,625+C(a*7)*(13+5/(.2+P(b*4,4)))+b*400,a*1-b/2,a];A=a*2-1;B=b*2-1;if(A*A+B*B<1){if(c>37){n=(j=c&1)?6:4;o=.5/(a+.01)+C(b*125)*3-a*300;w=b*h;return[o*C(n)+w*S(n)+j*610-390,o*S(n)-w*C(n)+550-j*350,1180+C(B+A)*99-j*300,.4-a*.1+P(1-B*B,-h*6)*.15-a*b*.4+C(a+b)/5+P(C((o*(a+1)+(B>0?w:-w))/25),30)*.1*(1-B*B),o/1e3+.7-o*w*3e-6]}if(c>32){c=c*1.16-.15;o=a*45-20;w=b*b*h;z=o*S(c)+w*C(c)+620;return[o*C(c)-w*S(c),28+C(B*.5)*99-b*b*b*60-z/2-h,z,(b*b*.3+P((1-(A*A)),7)*.15+.3)*b,b*.7]}o=A*(2-b)*(80-c*2);w=99-C(A)*120-C(b)*(-h-c*4.9)+C(P(1-b,7))*50+c*2;z=o*S(c)+w*C(c)+700;return[o*C(c)-w*S(c),B*99-C(P(b, 7))*50-c/3-z/1.35+450,z,(1-b/1.2)*.9+a*.1, P((1-b),20)/4+.05]}}setInterval('for(i=0;i<1e4;i++)if(s=p(R(),R(),i%46/.74)){z=s[2];x=~~(s[0]*f/z-h);y=~~(s[1]*f/z-h);if(!m[q=y*f+x]|m[q]>z)m[q]=z,a.fillStyle="rgb("+~(s[3]*h)+","+~(s[4]*h)+","+~(s[3]*s[3]*-80)+")",a.fillRect(x,y,1,1)}',0)
+// end of submission //
+</script>
+</body>
+</html>
