--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</body>
 </html>
 <script type="text/javascript">
-var arr=["秦筱琼","筱琼你很漂亮！","你好吗","干嘛呢","你很漂亮"]
+var arr=["哈喽","你很漂亮！","你好吗","干嘛呢","你很漂亮"]
 //window.setTimeout(newsone, 500)
 var o=0;
 function newsone(){
